--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_URL=http://localhost:5000
-# backdemo-production-ba49.up.railway.app
-VITE_API_URL=backdemo-production-ba49.up.railway.app
+
+VITE_API_URL=https://backdemo-production-ba49.up.railway.app/
